feat(identity): issue permission authorities in access tokens